--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2018"
 [dependencies]
 actix-rt = "^1"
 actix-web = "^2"
+actix-cors = "^0.2.0"
 diesel = { version = "^1", features = ["postgres", "r2d2", "serde_json"] }
 dotenv = "^0.15"
+env_logger = "^0.7"
 lazy_static = "^1.4"
 mecab = "*"
 r2d2 = "^0.8"
